# deb-ai-tor

./: .copier-answers.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: debate_markets.ipynb  debate_sandwich.ipynb  debate_sandwich.py  debate_sandwich.sh
src/deb_ai_tor/: __init__.py
src/deb_ai_tor/environments/: __init__.py  debate.py  debate_markets.py  debate_sandwich.py
tests/: test_debate_markets.py
